litmask/tests/compile/mask_non_whitelisted_macro.stderr
error: mask! accepts string, byte string, or C string literals
 --> tests/compile/mask_non_whitelisted_macro.rs:9:19
  |
9 |     let _ = mask!(vec![1, 2, 3]);
  |                   ^^^
